Added status sign and colors

--- a/sass/modules/_colors.scss
+++ b/sass/modules/_colors.scss
@@ -5,3 +5,7 @@ $color-nav-background: #333;
 $color-link: #00f;
 $color-link--hover: #0f0;
 $color-link--visited: #f00;
+
+$color-sign-unknown: #888;
+$color-sign-available: #00B244;
+$color-sign-not-available: #B21209;
