--- a/sass/partials/_status.scss
+++ b/sass/partials/_status.scss
@@ -37,3 +37,36 @@
       color: $color-detail-text;
    }
 }
+
+.alertbutton {
+   display: none;
+   margin: 2em auto;
+   font-size: 1.4em;
+   padding: 0.8em 1em;
+   border: solid 2px #444;
+   border-radius: 6px;
+   text-decoration: none;
+   color: #444;
+   .icon-alert {
+      color: #333;
+      margin-right: 0.4em;
+      display: inline-block;
+   }
+   .jsUnavailable & {
+      display: inline-block;
+   }
+}
+
+.request {
+   display: inline;
+   .jsNotify & {
+      display: none;
+   }
+}
+
+.willnotify {
+   display: none;
+   .jsNotify & {
+      display: inline;
+   }
+}
