--- a/sass/modules/_colors.scss
+++ b/sass/modules/_colors.scss
@@ -2,9 +2,9 @@
 $color-text: #000;
 $color-background: #fcfcfc;
 $color-nav-background: #333;
-$color-link: #00f;
-$color-link--hover: #0f0;
-$color-link--visited: #f00;
+$color-link: #2A5DB0;
+$color-link--hover: darken(#2A5DB0, 5%);
+$color-link--visited: darken(#2A5DB0, 5%);
 
 $color-sign-unknown: #888;
 $color-sign-available: #00B244;
@@ -14,3 +14,6 @@ $color-status-text-unknown: #444;
 $color-status-text-available: $color-sign-available;
 $color-status-text-not-available: $color-sign-not-available;
 $color-detail-text: #999;
+
+$color-alert-button: #444;
+$color-alert-button--hover: #222;
