Added valid time staleness display

--- a/sass/modules/_colors.scss
+++ b/sass/modules/_colors.scss
@@ -17,3 +17,7 @@ $color-detail-text: #999;
 
 $color-alert-button: #444;
 $color-alert-button--hover: #222;
+
+$color-stale-data-slight: #997A32;
+$color-stale-data-medium: #C97018;
+$color-stale-data-major: $color-sign-not-available;
