--- a/sass/partials/_status.scss
+++ b/sass/partials/_status.scss
@@ -74,3 +74,15 @@
       display: inline;
    }
 }
+
+.jsStaleSlight {
+   color: $color-stale-data-slight !important;
+}
+
+.jsStaleMedium {
+   color: $color-stale-data-medium !important;
+}
+
+.jsStaleMajor {
+   color: $color-stale-data-major !important;
+}
